[project]
name = "ha-usage-records"
version = "0.1.0"
description = ""
authors = [
    {name = "Nic Henke",email = "nichenke@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
